fix(collapse): fix collapse empty box style #INFR-4220

--- a/src/collapse/styles/collapse.scss
+++ b/src/collapse/styles/collapse.scss
@@ -47,6 +47,9 @@ $thy-collapse-prefix-cls: 'thy-collapse';
             &-box {
                 padding: 0px variables.$collapse-spacing-x (variables.$collapse-spacing-y + 4) variables.$collapse-spacing-x;
             }
+            &-box:empty {
+                display: none;
+            }
         }
     }
     & &-item-disabled > &-header {
